Added position css

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <!--Logo-->
         <div id="logo">
             <a href="/">
-                < John <span class="John">Doe</span> />
+                < Noelle <span class="John">Maingi</span> />
             </a>
         </div>
         <!--nav links-->
@@ -46,7 +46,7 @@
         <div class="column1">
             <p>
                 <span class="para">
-                    Hi,I'm <span class="John">John Doe</span> <br />Fullstack
+                    Hi,I'm <span class="John">Noelle Maingi</span> <br />Fullstack
                     Developer</span>
                 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
                 Experienced Full Stack Developer with a demonstrated history of
