Added position css

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         <div class="column1">
             <p>
                 <span class="para">
-                    Hi,I'm <span class="John">Noelle Maingi</span> <br />Fullstack
-                    Developer</span>
+                    Hi, I'm <span class="John">Noelle Maingi</span> <br />Fullstack
+                    Developer</span><br>
                 Experienced Full Stack Developer with a demonstrated history of
                 working in the internet industry. <br />Building Web applications with
                 Angular, PHP, Laravel, Python, Django, Flask, <br />MySQL/Postgres and
@@ -57,14 +57,14 @@
             <button>View Resume</button>
             <button>Contact me</button><br />
             <div class="social">
-                <img class="image" src="./img/iconfinder_social_github_211904.svg" alt="git" />
+                <img class="image" src="./img/iconfinder_social_github_211904.svg" />
                 <img class="image" src="./img/iconfinder_linkedin_business_network_social_367593.svg" />
                 <img class="image" src="./img/iconfinder_twitter_bird_104501.svg" />
                 <img class="image" src="./img/iconfinder_google_843776.svg" />
             </div>
         </div>
         <div class="column">
-            <img src="./img/download.png" alt="person" style="width: 250px; height: 250px" />
+            <img src="./img/download.png" alt="person" />
         </div>
     </div>
 </body>
