Changed the image and added links to the social media pages

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/style.css" />
     <title>Portfolio</title>
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
 </head>
 
 <body>
@@ -14,14 +15,14 @@
         <!--Logo-->
         <div id="logo">
             <a href="/">
-                < Noelle <span class="John">Maingi</span> />
+                Noelle <span class="John">Maingi</span>
             </a>
         </div>
         <!--nav links-->
         <nav>
             <ul>
                 <li>
-                    <a href=""> About </a>
+                    <a href="/"> About </a>
                 </li>
                 <li>
                     <a href=""> Services </a>
@@ -54,17 +55,19 @@
                 some other cool libraries an frameworks.
             </p>
 
-            <button>View Resume</button>
-            <button>Contact me</button><br />
+            <button><a href="">View Resume</a> </button>
+            <button><a href = "mailto:noelle.maingi@student.moringaschool.com">
+                Contact Me
+                </a></button><br />
             <div class="social">
-                <img class="image" src="./img/iconfinder_social_github_211904.svg" /> 
-                <img class="image" src="./img/iconfinder_linkedin_business_network_social_367593.svg" />
-                <img class="image" src="./img/iconfinder_twitter_bird_104501.svg" />
-                <img class="image" src="./img/iconfinder_google_843776.svg" />
+                <li><a href="https://github.com/Noelle-Wavinya-Maingi"><i class="fab fa-github "></i></a></li>
+                <li><a href="https://linkedin.com"><i class="fab fa-linkedin-in"></i></a></li>
+                <li><a href="https://twitter.com"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="https://google.com"><i class="fab fa-google"></i></a></li>
             </div>
         </div>
         <div class="column">
-            <img src="./img/download.png" alt="person" />
+            <img src="./img/Download.jpeg" alt="person" />
         </div>
     </div>
 </body>
